fix: Corrige z-index das legendas para não ficarem na frente da navbar

--- a/gradview/frontend/src/UI/Legend/Legend.css
+++ b/gradview/frontend/src/UI/Legend/Legend.css
@@ -17,6 +17,6 @@
     line-height: 20px;
     font-size: 16px;
     font-weight: bold;
-    z-index: 150;
+    z-index: 0;
     cursor: pointer;
 }
